tests/ui/test-attrs/test-function-elided-no-main.stderr
error[E0601]: `main` function not found in crate `test_function_elided_no_main`
  --> $DIR/test-function-elided-no-main.rs:7:2
   |
LL | }
   |  ^ consider adding a `main` function to `$DIR/test-function-elided-no-main.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.
